--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -1,21 +1,21 @@
 <div class="x-entry">
   <h3>{{api.cuurentUser}} profile update</h3>
 
-  <form ng-submit="api.temp(account)">
+  <form ng-submit="api.myUpdate(account)">
     <div>
       <label for="changePassword">change pasword?</label>
-      <input type="checkbox" ng-model="api.account.ignorePasswordChange">
+      <input type="checkbox" ng-model="api.account.wantPasswordChange">
     </div>
 
-    <div ng-show="api.account.ignorePasswordChange">
+    <div ng-show="api.account.wantPasswordChange">
       <label for="oldPassword">old password</label>
       <input type="password" ng-model="api.account.oldPassword">
     </div>
-    <div ng-show="api.account.ignorePasswordChange">
+    <div ng-show="api.account.wantPasswordChange">
       <label for="newPassword1">new password</label>
       <input type="password" ng-model="api.account.newPassword1">
     </div>
-    <div ng-show="api.account.ignorePasswordChange">
+    <div ng-show="api.account.wantPasswordChange">
       <label for="newPassword2">retype password</label>
       <input type="password" ng-model="api.account.newPassword2">
     </div>
@@ -28,6 +28,6 @@
       <label for="e_confirmed">Confirmed</label>
       <input type="checkbox" ng-model="api.account.e_confirmed" required>
     </div>
-    <button class="x-btn x-btn-add" type="submit">signup</button>
+    <button class="x-btn x-btn-add" type="submit">update</button><span>{{api.enote}}</span>
   </form>
 </div>
