Complete create new task
Complete the add new task to the database.

--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,4 +1,6 @@
 <div class="x-entry">
+  <h4>New User Signup</h4>
+
   <form ng-submit="api.signup(account)">
     <div>
       <label for="username">username</label>
