--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,4 +1,6 @@
 <div class="x-entry">
+  <h4>User Login</h4>
+
   <form ng-submit="api.login(userPass)">
     <div>
       <label for="username">username</label>
