--- a/public/partials/tasks.html
+++ b/public/partials/tasks.html
@@ -1,16 +1,13 @@
 <div class="x-entry">
+  <h4>All Task List</h4>
 
-<h4>...here will display the task lists</h4>
-
-<ul>
-  <span> TASK  |  DESCRIPTION  | DUE DATE | COMPLETED ON | </span>
-  <li ng-repeat="task in api.taskList">
-    <button class="x-btn x-btn-add" ng-click="api.deleteOneTask($index)">remove</button>
-    <span ng-click="api.getOneTask($index)">{{ task.name }} | {{ task.description }} | {{task.date_due}} | {{task.date_completed}}</span>
-  </li>
-</ul>
-
-
-
+  <ul>
+    <span> TASK  |  DESCRIPTION  | DUE DATE | COMPLETED ON | </span>
+    <li ng-repeat="task in api.taskList">
+      <button class="x-btn x-btn-add" ng-click="api.deleteOneTask($index)">remove</button>
+      <tt ng-click="api.getOneTask($index)">{{ task.name }} | {{ task.description }} | {{task.date_due}} | {{task.date_completed}}</tt>
+    </li>
+    <button class="x-btn x-btn-add" ng-click="api.newTask()">new task</button>
+  </ul>
 
 </div>
