Complete full CRUD application - no style yet
Complete full CRUD application with authentication without any
style yet.

--- a/public/partials/taskedit.html
+++ b/public/partials/taskedit.html
@@ -12,7 +12,7 @@
       <input type="textarea" ng-model="api.detail.description" required>
     </div>
     <!-- <div>
-    *** some convertion issues to be resolved in sencond pass ***
+    *** to be decided in sencond pass if want to update values***
       <label for="date_due">date due</label>
       <input type="date" ng-model="api.detail.date_due" required>
     </div>
