--- a/public/partials/tasks.html
+++ b/public/partials/tasks.html
@@ -3,7 +3,7 @@
 
   <ul>
     <span> ID | Complete? | TASK  |  DESCRIPTION  | DUE DATE | COMPLETED ON | </span>
-    <li ng-repeat="task in api.taskList">
+    <li ng-repeat="task in api.taskList | filter:task.is_complete:strict" >
       <button class="x-btn x-btn-add" ng-click="api.deleteOneTask($index)">remove</button>
       <tt ng-click="api.getOneTask($index)"> {{task.id}} | {{task.is_complete}} | {{ task.name }} | {{ task.description }} | {{task.date_due}} | {{task.date_completed}}</tt>
     </li>
