--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -16,7 +16,7 @@
     </div>
     <div>
       <label for="e_confirmed">Confirmed</label>
-      <input type="checkbox" ng-model="account.e_confirmed" required>
+      <input type="checkbox" ng-model="account.e_confirmed">
     </div>
     <button class="x-btn x-btn-add" type="submit">signup</button>
   </form>
