--- a/public/partials/user.html
+++ b/public/partials/user.html
@@ -26,7 +26,7 @@
     </div>
     <div>
       <label for="e_confirmed">Confirmed</label>
-      <input type="checkbox" ng-model="api.account.e_confirmed" required>
+      <input type="checkbox" ng-model="api.account.e_confirmed">
     </div>
     <button class="x-btn x-btn-add" type="submit">update</button><span>{{api.enote}}</span>
   </form>
