--- a/public/partials/taskedit.html
+++ b/public/partials/taskedit.html
@@ -11,12 +11,12 @@
       <label for="description">description</label>
       <input type="textarea" ng-model="api.detail.description" required>
     </div>
-    <!-- <div>
-    *** to be decided in sencond pass if want to update values***
+    <div>
+    <!-- *** to be decided in sencond pass if want to update values*** -->
       <label for="date_due">date due</label>
       <input type="date" ng-model="api.detail.date_due" required>
     </div>
-    <div>
+    <!-- <div>
       <label for="assigned_to">Assigned to</label>
       <select name="assigned_to" id="assigned_to"
         ng-options="option.username for option in api.allUsers track by option.id"
