--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,4 +1,4 @@
-<div class="x-entry">
+<div class="container">
   <h4>New User Signup</h4>
 
   <form ng-submit="api.signup(account)">
@@ -15,9 +15,10 @@
       <input type="text" ng-model="account.email" required>
     </div>
     <div>
+      <input type="checkbox" id="e_confirmed" ng-model="account.e_confirmed">
       <label for="e_confirmed">Confirmed</label>
-      <input type="checkbox" ng-model="account.e_confirmed">
     </div>
-    <button class="x-btn x-btn-add" type="submit">signup</button>
+    <br>
+    <button class="waves-effect waves-light purple lighten-2 btn" type="submit">signup</button>
   </form>
 </div>
